bug github page

--- a/html/a_la_française.html
+++ b/html/a_la_française.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap"
@@ -18,15 +18,15 @@
   <!-- SECTION HEADER -->
   <header class="container">
     <div class="header_container">
-      <a href="/index.html" class="header_return"><i class="fas fa-arrow-left"></i></a>
-      <h1><img src="/Images/logo/ohmyfood.png" alt="logo" class="header_logo"></h1>
+      <a href="index.html" class="header_return"><i class="fas fa-arrow-left"></i></a>
+      <h1><img src="Images/logo/ohmyfood.png" alt="logo" class="header_logo"></h1>
     </div>
   </header>
   <main>
     <!-- SECTION BANNER -->
     <div>
       <div class="banner_container">
-        <img src="/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat d'a la francaise"
+        <img src="Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat d'a la francaise"
           class="banner_img">
       </div>
     </div>
